style.css
/* ... */
.woostify-icon-bar span:before {
  top: -6px;
}
.woostify-icon-bar span:after {
  bottom: -6px;
}

.sidebar-menu-open {
  overflow: hidden;
}
.sidebar-menu-open .woostify-icon-bar span {
  transform: rotate(180deg);
}
.sidebar-menu-open .woostify-icon-bar span:before {
  width: 50%;
  transform: rotate(45deg) translate(14px, -11px);
}
.sidebar-menu-open .woostify-icon-bar span:after {
  width: 50%;
  transform: rotate(-45deg) translate(14px, 11px);
}
.sidebar-menu-open #woostify-overlay {
  opacity: 1;
  visibility: visible;
  pointer-events: auto;
}
.sidebar-menu-open #view {
  transform: translateX(300px);
}
.sidebar-menu-open .rtl #view {
  transform: translateX(-300px);
}
.sidebar-menu-open .rtl .sidebar-menu {
  transform: translateX(0);
}
.sidebar-menu-open .sidebar-menu {
  transform: translateX(0);
}
@media (min-width: 992px) {
  .sidebar-menu-open .sidebar-menu .site-navigation {
    left: 60px;
    right: 60px;
  }
}

.sidebar-menu {
  position: fixed;
  left: 0;
  bottom: 0;
  top: 0;
  background-color: #fff;
  z-index: 200;
  padding-top: 15px;
  padding-bottom: 15px;
  width: 90%;
  overflow-y: scroll;
  transform: translateX(-100%);
}
.sidebar-menu.has-nav-tab {
  padding-top: 0;
}
.sidebar-menu .arrow-icon {
  transform: rotate(0deg);
}
.sidebar-menu .arrow-icon .woostify-svg-icon {
  transition: all 0.3s;
}
.sidebar-menu .arrow-icon.active .woostify-svg-icon {
  transform: rotate(180deg);
}
.logged-in.admin-bar .sidebar-menu {
  top: 46px;
}
@media (min-width: 783px) {
  .logged-in.admin-bar .sidebar-menu {
    top: 32px;
  }
}
.sidebar-menu .hide {
  display: none;
}
.sidebar-menu .primary-navigation:not(.elementor-inner) a {
  line-height: 3em !important;
  position: relative;
  display: flex;
  justify-content: space-between;
  align-items: center;
}
.sidebar-menu .ajax-category-filter-box {
  background-color: #f8f8f8;
  border-right: 0;
}
.sidebar-menu .site-search {
  margin-bottom: 20px;
  padding-left: 20px;
  padding-right: 20px;
}
.sidebar-menu .site-search .search-field {
  border-radius: 3px;
}
.sidebar-menu .site-search .search-form-icon {
  width: 40px;
  height: 40px;
}
.sidebar-menu .search-form,
.sidebar-menu .woocommerce-product-search {
  height: auto;
}
.sidebar-menu .search-form .search-field,
.sidebar-menu .woocommerce-product-search .search-field {
  padding-right: 40px;
  height: auto;
  min-height: 40px;
}
.sidebar-menu .search-form .search-submit,
.sidebar-menu .woocommerce-product-search button[type=submit] {
  width: 40px;
}
.sidebar-menu .search-form:after,
.sidebar-menu .woocommerce-product-search:after {
  width: 40px;
  height: 40px;
}
.sidebar-menu .mobile-nav-tab {
  padding: 0;
  margin: 0;
  display: flex;
}
@media (min-width: 992px) {
  .sidebar-menu .mobile-nav-tab {
    display: none;
  }
}
.sidebar-menu .mobile-nav-tab li {
  cursor: pointer;
  width: 50%;
  text-align: center;
  line-height: 1;
  position: relative;
}
.sidebar-menu .mobile-nav-tab li a {
  font-size: 16px;
  text-decoration: none;
  display: inline-block;
  text-transform: uppercase;
}
.sidebar-menu .mobile-nav-tab li.active:after {
  content: "";
  display: block;
  height: 3px;
  width: 100%;
  position: absolute;
  bottom: 0;
  left: 0;
}
.sidebar-menu .site-navigation.has-nav-tab .main-navigation, .sidebar-menu .site-navigation.has-nav-tab .categories-navigation {
  display: none;
}
.sidebar-menu .site-navigation.has-nav-tab .main-navigation.active {
  display: block;
}
.sidebar-menu .site-navigation.has-nav-tab .categories-navigation.active {
  display: block;
}
.sidebar-menu .site-navigation nav > ul > li:first-child > a {
  border-top: 1px solid #ececec;
}
.sidebar-menu .site-navigation nav .menu-item a {
  padding: 0 20px;
  border-bottom: 1px solid #ececec;
}
.sidebar-menu .site-navigation nav .menu-item a > .arrow-icon {
  width: 48px;
  height: 48px;
  margin-right: -20px;
  border-left: 1px solid #ececec;
}
.sidebar-menu .site-navigation nav .menu-item a:hover {
  background-color: rgba(0, 0, 0, 0.03);
}
.sidebar-menu .site-navigation nav .sub-menu a {
  padding-left: 30px;
}
@media (min-width: 992px) {
  .sidebar-menu .main-navigation .primary-navigation .menu-item-has-mega-menu .mega-menu-wrapper {
    min-width: auto;
    max-width: 100%;
    transform: none;
    position: static;
    box-shadow: none;
    opacity: 1;
    visibility: visible;
  }
  .sidebar-menu .main-navigation .primary-navigation .sub-menu {
    margin-left: 20px;
  }
  .sidebar-menu .main-navigation .primary-navigation .sub-menu:not(.sub-mega-menu) {
    transition-duration: 0s;
  }
  .sidebar-menu .main-navigation .primary-navigation > .menu-item ul:not(.sub-mega-menu) {
    opacity: 1;
    visibility: visible;
    transform: none;
    position: static;
    box-shadow: none;
    transition-duration: 0s;
    min-width: auto;
  }
  .sidebar-menu .main-navigation .primary-navigation > .menu-item ul:not(.sub-mega-menu) a {
    padding-right: 0;
    padding-left: 0;
  }
}
.sidebar-menu .primary-navigation {
  padding-left: 0;
  margin: 0;
}
.sidebar-menu .primary-navigation .menu-item-has-children {
  position: relative;
}
.sidebar-menu .primary-navigation .sub-mega-menu {
  display: none;
}
.sidebar-menu .primary-navigation .sub-menu {
  border-radius: 0;
  pointer-events: auto;
  margin-left: 0;
  transition-duration: 0s;
  display: none;
  position: static;
  box-shadow: none;
  transform: none;
}
.sidebar-menu .primary-navigation .sub-menu a:hover {
  background-color: transparent;
}
.sidebar-menu .primary-navigation > .menu-item {
  display: block;
}
.sidebar-menu .primary-navigation > .menu-item.current-menu-ancestor > a:before, .sidebar-menu .primary-navigation > .menu-item.current-menu-parent > a:before, .sidebar-menu .primary-navigation > .menu-item.current_page_parent > a:before, .sidebar-menu .primary-navigation > .menu-item.current_page_ancestor > a:before {
  content: "";
  width: 40px;
}
/* ... */

